[gd_scene load_steps=27 format=2]

[ext_resource path="res://JesusSaves/src/Player/Player.gd" type="Script" id=1]
[ext_resource path="res://JesusSaves/src/Player/Camera2D.gd" type="Script" id=2]
[ext_resource path="res://JesusSaves/assets/art/weapons/swoosh.png" type="Texture" id=3]
[ext_resource path="res://JesusSaves/assets/audio/slash.wav" type="AudioStream" id=4]
[ext_resource path="res://JesusSaves/assets/audio/pickup.wav" type="AudioStream" id=5]
[ext_resource path="res://JesusSaves/assets/art/fx/round_particle.png" type="Texture" id=6]
[ext_resource path="res://JesusSaves/assets/art/fx/ice.png" type="Texture" id=7]
[ext_resource path="res://JesusSaves/assets/audio/footsteps.ogg" type="AudioStream" id=8]
[ext_resource path="res://JesusSaves/assets/audio/Magical Lightning1.wav" type="AudioStream" id=9]
[ext_resource path="res://JesusSaves/assets/audio/Poof.wav" type="AudioStream" id=10]
[ext_resource path="res://JesusSaves/assets/art/player/player.png" type="Texture" id=11]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 23 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 45, 29 )

[sub_resource type="Animation" id=3]
resource_name = "light_attack_1"
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Weapon:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.37, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ -50.0, -50.0, 230.0, 310.0 ]
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Weapon:position:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( -2, -0.244807, -27.2397, 0.0460418, 0, -50, -0.133278, 29, 0.0455397, 140.5, -34, -0.0839903, 141.5, 0.0827067, -43.2397, -49.5, -0.0557716, -10.7397, 0.239831, 35.2603, -2, -0.244807, -27.2397, 0.25, 0 ),
"times": PoolRealArray( 0, 0.2, 0.35, 0.5, 1 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Weapon:position:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( -8, -0.25, 0, 0.0565767, -30, -42, -0.100503, 1, 0.0885266, 31.5, 28, -0.0532855, -3.50001, 0.0378998, 1.76035, 2.5, -0.061384, 8, 0.25, 0, -8, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.2, 0.35, 0.5, 1 )
}
tracks/3/type = "value"
tracks/3/path = NodePath("Weapon:show_behind_parent")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.2, 0.25, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/4/type = "method"
tracks/4/path = NodePath("..")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.25, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "hit"
}, {
"args": [ null ],
"method": "stop_hovering"
} ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("swoosh:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.25, 0.29, 0.3, 0.31, 0.32, 0.33 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 0, 1, 2, 3, 4, 5 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("swoosh:flip_v")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("../Swing:playing")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=4]
resource_name = "light_attack_2"
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Weapon:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 230.0, -60.0, -50.0 ]
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Weapon:position:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( -34, -0.0839903, 141.5, 0.106866, 156.54, -65.4753, -0.0776923, 177.475, 0.120788, -21.2644, -86.7397, -0.0827077, 4, 0.167757, -3.7603, -2, -0.226169, -57.5, 0.25, 0 ),
"times": PoolRealArray( 0, 0.2, 0.47, 1 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Weapon:position:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 28, -0.0532855, -3.50001, 0.124243, -6.50001, -42, -0.104, 0, 0.404146, 1.5, -8, -0.247297, -45.5, 0.25, 0 ),
"times": PoolRealArray( 0, 0.2, 1 )
}
tracks/3/type = "value"
tracks/3/path = NodePath("Weapon:show_behind_parent")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.01, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/4/type = "method"
tracks/4/path = NodePath("..")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.09, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "hit"
}, {
"args": [  ],
"method": "stop_hovering"
} ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("swoosh:flip_v")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("swoosh:frame")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.09, 0.11, 0.12, 0.13, 0.14, 0.15 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 0, 1, 2, 3, 4, 5 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("../Swing:playing")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=5]
resource_name = "fall"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 19, 20 ]
}

[sub_resource type="Animation" id=6]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 13, 14, 15, 16, 17, 18 ]
}

[sub_resource type="Animation" id=7]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="Animation" id=8]
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8, 9, 10, 11, 12 ]
}

[sub_resource type="Gradient" id=9]
offsets = PoolRealArray( 0, 0.868, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=10]
gradient = SubResource( 9 )

[sub_resource type="ParticlesMaterial" id=11]
emission_shape = 2
emission_box_extents = Vector3( 30, 1, 1 )
flag_disable_z = true
gravity = Vector3( 0, -200, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
radial_accel = 80.0
radial_accel_random = 1.0
scale = 0.25
scale_random = 1.0
color_ramp = SubResource( 10 )
hue_variation = -0.07
hue_variation_random = 1.0

[sub_resource type="Gradient" id=12]
offsets = PoolRealArray( 0, 0.088, 0.912, 1 )
colors = PoolColorArray( 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=13]
gradient = SubResource( 12 )

[sub_resource type="ParticlesMaterial" id=14]
emission_shape = 2
emission_box_extents = Vector3( 30, 10, 1 )
flag_disable_z = true
gravity = Vector3( 0, 300, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.5
scale_random = 1.0
color_ramp = SubResource( 13 )

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 46, 29 )

[node name="Player" type="KinematicBody2D" groups=[
"Player",
]]
z_index = 1
collision_mask = 0
script = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
limit_left = -1643
limit_right = 11450
limit_smoothed = true
smoothing_enabled = true
smoothing_speed = 12.0
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 6 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 11 )
vframes = 5
hframes = 5

[node name="WeaponArea" type="Area2D" parent="Sprite"]
show_behind_parent = true
position = Vector2( 55, 0 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/WeaponArea"]
position = Vector2( 0, 3.8147e-06 )
shape = SubResource( 2 )

[node name="swoosh" type="Sprite" parent="Sprite"]
position = Vector2( 53, 0 )
texture = ExtResource( 3 )
vframes = 2
hframes = 3
frame = 5

[node name="Weapon" type="Sprite" parent="Sprite"]
show_behind_parent = true
position = Vector2( -2, -8 )
rotation = -0.872665

[node name="WeaponAnimationPlayer" type="AnimationPlayer" parent="Sprite"]
anims/light_attack_1 = SubResource( 3 )
anims/light_attack_2 = SubResource( 4 )
blend_times = [ "light_attack_1", "light_attack_2", 0.1, "light_attack_2", "light_attack_1", 0.1 ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/fall = SubResource( 5 )
anims/hover = SubResource( 6 )
anims/idle = SubResource( 7 )
anims/walk = SubResource( 8 )

[node name="Tween" type="Tween" parent="."]

[node name="Spells" type="Node2D" parent="."]
position = Vector2( 130, 0 )

[node name="HolySpell" type="Particles2D" parent="Spells"]
position = Vector2( 0, 32 )
emitting = false
amount = 300
lifetime = 0.7
local_coords = false
process_material = SubResource( 11 )
texture = ExtResource( 6 )

[node name="IceSpell" type="Particles2D" parent="Spells"]
position = Vector2( 0, -56 )
emitting = false
amount = 20
lifetime = 0.7
local_coords = false
process_material = SubResource( 14 )
texture = ExtResource( 7 )

[node name="AreaOfEffect" type="Area2D" parent="Spells"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Spells/AreaOfEffect"]
shape = SubResource( 15 )

[node name="SkillTimer" type="Timer" parent="."]
wait_time = 0.7
one_shot = true

[node name="Slash" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = -5.0

[node name="Swing" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 10 )
volume_db = -12.0

[node name="Lightning" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 9 )
volume_db = -5.0

[node name="FootStep" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )

[node name="PickUp" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
[connection signal="timeout" from="SkillTimer" to="." method="_on_SkillTimer_timeout"]
